--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cron": "^2.0.0",
+    "@types/uuid": "^8.3.4",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -27,6 +29,8 @@
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.1",
+    "uuid": "^8.3.2",
     "vhost": "^3.0.2"
   },
   "engines": {
